# sgi

./: README.md  pyproject.toml
sgi/: app.py  controller.py  model.py  obj.py  view.py
tests/: test_obj.py  test_transforms.py
