[tool.poetry]
name = "sgi"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[tool.poetry.scripts]
sgi-run = "sgi.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
